gitops/apps/backend/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend
  namespace: apps
  labels:
    app.kubernetes.io/name: backend
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: backend
  strategy:
    canary:
      stableService: backend-stable
      canaryService: backend-canary
      trafficRouting:
        alb:
          ingress: backend
          rootService: backend-root
          servicePort: 80
      steps:
        - setWeight: 10
        - pause:
            duration: 10s
        - setWeight: 50
        - pause:
            duration: 10s
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend
    spec:
      containers:
        - name: backend
          image: 072754096540.dkr.ecr.us-east-2.amazonaws.com/backend:ead05c5d11c29113c50f877b4b74510fd30e9394
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /weatherforecast
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /weatherforecast
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
