gitops/apps/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: apps
  labels:
    app.kubernetes.io/name: backend
spec:
  selector:
    app.kubernetes.io/name: backend
  ports:
    - name: http
      port: 80
      targetPort: http
