gitops/apps/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: apps
  annotations:
    alb.ingress.kubernetes.io/actions.backend-root: '{"Type":"forward","ForwardConfig":{"TargetGroups":[{"ServiceName":"backend-canary","ServicePort":"80","Weight":0},{"ServiceName":"backend-stable","ServicePort":"80","Weight":100}]}}'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:072754096540:certificate/da5dc745-8149-4fb2-93b7-465f65ad94ab
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: backend.marmil.co
spec:
  ingressClassName: alb
  rules:
    - host: backend.marmil.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-root
                port:
                  name: use-annotation
